# laddu

./: .gitignore  .justfile  .pre-commit-config.yaml  .pytest.ini  .readthedocs.yaml  .release-please-manifest.json  .yamloom.py  Agents.md  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  THIRD_PARTY_NOTICES  codecov.yml  coverage-rust.json  make.py  mise.toml  pytest.toml  release-please-config.json  release-plz.toml  ruff.toml  rustfmt.toml  ty.toml
crates/laddu/: CHANGELOG.md  Cargo.toml
crates/laddu-amplitudes/: CHANGELOG.md  Cargo.toml  docs-header.html
crates/laddu-amplitudes/benches/: bench.parquet  zlm_benchmark.rs
crates/laddu-amplitudes/src/: angular.rs  breit_wigner.rs  common.rs  flatte.rs  kmatrix.rs  lib.rs  lookup.rs  lookup_table.rs  phase_space.rs  piecewise.rs  resonance.rs  scalar.rs  semantic_key.rs  spin_factors.rs  voigt.rs  ylm.rs  zlm.rs
crates/laddu-amplitudes/src/angular/: barrier.rs  constants.rs  harmonics.rs  sdme.rs  tests.rs  wigner.rs
crates/laddu-amplitudes/src/kmatrix/: a0.rs  a2.rs  channel.rs  f0.rs  f2.rs  kopf.rs  mod.rs  pi1.rs  rho.rs
crates/laddu-amplitudes/src/resonance/: breit_wigner.rs  flatte.rs  phase_space.rs  tests.rs  voigt.rs
crates/laddu-amplitudes/src/scalar/: components.rs  tests.rs  variable.rs
crates/laddu-amplitudes/src/sequential/: mod.rs
crates/laddu-core/: CHANGELOG.md  Cargo.toml
crates/laddu-core/benches/: Justfile  README.md  bench.parquet  execution_context_benchmark.rs  expression_ir_benchmarks.rs  open_benchmark.rs
crates/laddu-core/benches/scripts/: expression_ir_compile_metrics.py  expression_ir_memory_metrics.py  io_bench_metrics.py  io_bench_regression_report.py
crates/laddu-core/examples/: mpi_memtrace.rs
crates/laddu-core/src/: amplitude.rs  amplitudes.rs  data.rs  execution.rs  execution_context.rs  expression.rs  kinematics.rs  lib.rs  math.rs  parameters.rs  quantum.rs  reaction.rs  resources.rs  thread_pool.rs  variables.rs  vectors.rs
crates/laddu-core/src/amplitude/: amplitude_trait.rs  ids.rs  semantic.rs  tags.rs  test_amplitude.rs
crates/laddu-core/src/amplitudes/: ir.rs  lowered.rs  semantic_key.rs  test_amplitude.rs
crates/laddu-core/src/data/: dataset.rs  event.rs  io.rs  metadata.rs  tests.rs
crates/laddu-core/src/execution/: context.rs  tests.rs  thread_pool.rs
crates/laddu-core/src/expression/: evaluator.rs  ir.rs  lowered.rs
crates/laddu-core/src/kinematics/: decay_angles.rs  frame_axes.rs  rest_frame.rs  support.rs
crates/laddu-core/src/math/: functions.rs  histogram.rs  wigner.rs
crates/laddu-core/src/parameters/: map.rs  parameter.rs
crates/laddu-core/src/quantum/: angular_momentum.rs  enums.rs  rules.rs  state.rs  types.rs
crates/laddu-core/src/reaction/: decay.rs  graph.rs  particle.rs  tests.rs  topology.rs  (+1 more)
crates/laddu-core/test_data/: data_amptools_pol.root  data_f64.parquet  data_f64.root  write_data.py
crates/laddu-extensions/: CHANGELOG.md  Cargo.toml
crates/laddu-extensions/scripts/: check_python_mpi_dataset_iteration.py  compare_mpi_nll_check.py
crates/laddu-extensions/src/: experimental.rs  ganesh.rs  ganesh_ext.rs  lib.rs  likelihood.rs  likelihoods.rs  optimize.rs  random.rs
crates/laddu-generation/: Cargo.toml
crates/laddu-generation/examples/: demo.rs
crates/laddu-generation/scripts/: hist.py
crates/laddu-generation/src/: distributions.rs  lib.rs  topology.rs
crates/laddu-python/: CHANGELOG.md  Cargo.toml
crates/laddu-python/src/: amplitudes.rs  data.rs  extensions.rs  generation.rs  lib.rs  math.rs  quantum.rs  variables.rs
crates/laddu/benches/: Justfile  README.md  bench.parquet  kmatrix_benchmark.rs  workflow_behavior_benchmarks.rs  workflow_behavior_cpu_benchmarks.rs  workflow_behavior_mpi_benchmarks.rs  zlm_benchmark.rs
crates/laddu/examples/: profile_kmatrix.rs
crates/laddu/src/: lib.rs  likelihoods.rs  main.rs
crates/laddu/test_data/: mc.parquet
crates/laddu/tests/: generation.rs
py-laddu/: CHANGELOG.md  Cargo.toml  docs-header.html  pyproject.toml
py-laddu-mpi/: CHANGELOG.md  Cargo.toml  README.md  docs  docs-header.html  examples  laddu  media  pyproject.toml  src  tests
py-laddu/benchmarks/: README.md  ingestion_benchmark.py
py-laddu/docs/source/: conf.py
py-laddu/examples/example_1/: amptools_1.cfg  binned_fit.py  example_1.py  example_1_mcmc.py  requirements_1.txt
py-laddu/examples/example_2/: example_2.py  requirements_2.txt
py-laddu/examples/example_mpi/: example_mpi.py
py-laddu/laddu/: __init__.py  __init__.pyi  _backend.py  _laddu.pyi  amplitude.py  amplitude.pyi  convert.py  data.py  data.pyi  experimental.pyi  extensions.py  extensions.pyi  generation.py  generation.pyi  io.py  io.pyi  laddu.py  laddu.pyi  likelihood.py  likelihood.pyi  math.py  math.pyi  mpi.py  mpi.pyi  optimize.py  optimize.pyi  pyproject.toml  quantum.py  quantum.pyi  reaction.py  reaction.pyi  variables.py  variables.pyi  vectors.py
py-laddu/laddu-mpi/: demo.py  pyproject.toml
py-laddu/laddu-std/: laddu  pyproject.toml
py-laddu/laddu/amplitudes/: __init__.py  __init__.pyi  angular.py  angular.pyi  breit_wigner.py  breit_wigner.pyi  common.py  common.pyi  flatte.py  flatte.pyi  kmatrix.py  kmatrix.pyi  lookup.pyi  lookup_table.py  lookup_table.pyi  piecewise.pyi  resonance.py  resonance.pyi  scalar.py  scalar.pyi  spin_factors.py  spin_factors.pyi  voigt.py  voigt.pyi  ylm.pyi
py-laddu/laddu/utils/: __init__.pyi  angular_momentum.py  angular_momentum.pyi  variables.py  variables.pyi  vectors.pyi
py-laddu/src/: lib.rs
py-laddu/tests/: test_amplitudes.py  test_angular.py  test_angular_momentum.py  test_breit_wigner.py  test_common.py  test_data.py  test_extensions.py  test_flatte.py  test_generation.py  test_harmonics.py  test_kmatrix.py  test_lookup.py  test_lookup_table.py  test_math.py  test_phase_space_factor.py  test_piecewise.py  test_public_api.py  test_resonance.py  test_scalar.py  test_serde.py  test_spin_factors.py  test_variables.py  test_vectors.py  test_voigt.py  test_ylm.py  test_zlm.py
py-laddu/tests/data_files/: data_amptools.root  data_f32.parquet  data_f32.root
(+153 files in other folders)
