[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "laddu-mpi"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version", "license", "description", "readme"]
dependencies = [
  "numpy",
]

[project.urls]
Documentation = "https://laddu.readthedocs.io/en/stable/"

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton"]
pandas = ["pandas"]
polars = ["polars"]
tests = ["pytest", "pytest-cov", "pandas", "polars", "uproot"]
uproot = ["uproot"]

[tool.maturin]
bindings = "pyo3"
strip = true
profile = "release"
sdist-include = ['../Cargo.lock']
features = ["mpi"]

[tool.coverage.run]
source = ["laddu"]
omit = [
  "tests/*",
  "docs/*",
  "laddu/mpi.py",
  "*/laddu/mpi.py",
]
branch = true

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]
