[package]
name = "laddu-amplitudes"
version = "0.18.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Amplitudes for the laddu library"
readme = "README.md"

[dependencies]
laddu-core = { workspace = true }

dyn-clone = { workspace = true }
errorfunctions = { workspace = true }
fastrand = { workspace = true }
fastrand-contrib = { workspace = true }
nalgebra = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
typetag = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
