[package]
name = "laddu-extensions"
version = "0.19.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Extensions to the laddu library"
readme = "README.md"

[dependencies]
laddu-core = { workspace = true }
laddu-amplitudes = { workspace = true }
approx = { workspace = true }

accurate = { workspace = true }
auto_ops = { workspace = true }
dyn-clone = { workspace = true }
fastrand = { workspace = true }
ganesh = { workspace = true }
mpi = { workspace = true, optional = true }
nalgebra = { workspace = true }
num = { workspace = true }
rapidhash = { workspace = true }
rayon = { workspace = true, optional = true }
parking_lot = { workspace = true }

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
mpi = ["dep:mpi", "laddu-core/mpi"]

[dev-dependencies]
approx = { workspace = true }
mpi_test = { workspace = true }
serde = { workspace = true }
typetag = { workspace = true }

[[bin]]
name = "mpi_nll_check"
path = "bin/mpi_nll_check.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }
