[package]
name = "laddu-python"
version = "0.18.0"
description = "Amplitude analysis made short and sweet"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords = ["PWA", "amplitude", "particle", "physics", "modeling"]
categories = ["science", "mathematics"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
laddu-amplitudes = { workspace = true }
laddu-core = { workspace = true, features = ["python"] }
laddu-extensions = { workspace = true }

ganesh = { workspace = true, features = ["python"] }
num = { workspace = true }
num_cpus = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["num-complex", "abi3-py37"] }
serde = { workspace = true }
serde-pickle = { workspace = true }
typetag = { workspace = true }

[features]
default = []
mpi = ["laddu-core/mpi", "laddu-extensions/mpi"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
