[package]
name = "laddu"
version = "0.15.0"
description = "Amplitude analysis made short and sweet"
documentation = "https://docs.rs/laddu"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords = ["PWA", "amplitude", "particle", "physics", "modeling"]
categories = ["science", "mathematics"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
laddu-core = { workspace = true }
laddu-amplitudes = { workspace = true }
laddu-extensions = { workspace = true }
mpi = { workspace = true, optional = true }

serde = { workspace = true }
typetag = { workspace = true }

[dev-dependencies]
num = { workspace = true }
criterion = { workspace = true }
num_cpus = { workspace = true }
fastrand = { workspace = true }
fastrand-contrib = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "kmatrix_benchmark"
harness = false

[features]
default = ["rayon"]
rayon = ["laddu-core/rayon"]
python = [
  "laddu-core/python",
  "laddu-amplitudes/python",
  "laddu-extensions/python",
]
mpi = ["laddu-core/mpi", "laddu-extensions/mpi", "dep:mpi"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
