[package]
name = "laddu"
version = "0.18.0"
description = "Amplitude analysis made short and sweet"
documentation = "https://docs.rs/laddu"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords = ["PWA", "amplitude", "particle", "physics", "modeling"]
categories = ["science", "mathematics"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
laddu-core = { workspace = true }
laddu-amplitudes = { workspace = true }
laddu-extensions = { workspace = true }
laddu-generation = { workspace = true }
mpi = { workspace = true, optional = true }
num = { workspace = true }
fastrand = { workspace = true }
rayon = { workspace = true }

serde = { workspace = true }
typetag = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
fastrand-contrib = { workspace = true }
nalgebra = { workspace = true }
num_cpus = { workspace = true }

[[bench]]
name = "workflow_behavior_cpu_benchmarks"
harness = false

[[bench]]
name = "workflow_behavior_mpi_benchmarks"
harness = false
required-features = ["mpi"]

[[bench]]
name = "kmatrix_benchmark"
harness = false

[[bin]]
name = "profile_cached_paths"
path = "bin/profile_cached_paths.rs"

[[bin]]
name = "profile_value_hotspots"
path = "bin/profile_value_hotspots.rs"

[features]
default = ["rayon"]
rayon = ["laddu-core/rayon"]
python = [
  "laddu-core/python",
]
mpi = ["laddu-core/mpi", "laddu-extensions/mpi", "dep:mpi"]
execution-context-prototype = ["laddu-core/execution-context-prototype"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
